# osi

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY_VERIFICATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_TEST_COVERAGE_ANALYSIS.md  Dockerfile  FINAL_CODE_QUALITY_VERIFICATION_REPORT.md  PRE_COMMIT_VALIDATION_GUIDE.md  README.md  TEST_SUITE_ANALYSIS_REPORT.md  THIRD_PARTY_LICENSES.txt  build_distributions.py  demo.py  install_osi.py  osi_main.py  pre_commit_check.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  setup_pre_commit_hook.py  test_file.txt  test_verification.txt
.github/: dependabot.yml
.github/workflows/: build-distributions.yml  code-quality.yml  code-signing.yml  security.yml  test.yml
build_scripts/: build_docker.py  build_executable.py  build_portable.py  build_pyinstaller.py  build_unix.sh  build_windows.bat  osi.spec  unicode_utils.py
docs/: AUTOMATED_RELEASES.md  DEVELOPER_GUIDE.md  INSTALLATION.md  RELEASE_GUIDE.md  USER_GUIDE.md
kits/test_kit/: text_processor-1.0.0-py3-none-any.whl
osi/: __init__.py  config_manager.py  dependency_resolver.py  environment_manager.py  launcher.py  pyproject_parser.py  tool_config.py  utils.py  wheel_manager.py
scripts/: osi.bat  osi.py  osi.sh
tests/: __init__.py  run_tests.py  test_config_manager.py  test_distribution.py  test_distribution_builds.py  test_distribution_installers.py  test_distribution_workflows.py  test_integration.py  test_launcher.py  test_wheel_manager.py
tests/data/: sample_data.csv  test_text.txt
